# VoxRay

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/: gl_utils.cpp  gl_utils.hpp  main.cpp
src/app/: app_context.cpp  app_context.hpp  camera.hpp  controls_data.hpp  frame_data.cpp  frame_data.hpp  input_state.hpp  lights.hpp  update_flags.hpp
src/gl/: gl_utils.cpp
src/graphics/: gl_utils.cpp  gl_utils.hpp  render_targets.hpp  update_graphics.cpp  update_graphics.hpp
src/preprocessing/: compute_gradient.cu  compute_gradient.hpp  dicom_utils.cpp  dicom_utils.hpp  gaussian_blur.cu  gaussian_blur.hpp  shapes.cu  shapes.hpp  voxel_grid.hpp
src/ui/: imgui_utils.cpp  imgui_utils.hpp  viewport_window.hpp  windows.cpp  windows.hpp
